feat: implement login page with demo credentials and theme toggle
- Added a new login page with email and password fields.
- Integrated demo login functionality for admin and employee roles.
- Implemented theme toggle component for light, dark, and system themes.
- Created reusable UI components: Button, Card, Input, Label, and Dropdown Menu.
- Set up middleware for route protection based on authentication status.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,20 @@ services:
 
   frontend:
     container_name: frontend
+    depends_on:
+      - database
     build:
       dockerfile: packages/web/frontend/Dockerfile
       context: .
+    develop:
+      watch:
+        - action: sync
+          path: packages/web/frontend
+          target: /app/packages/web/frontend
+          ignore:
+            - node_modules
+        - action: rebuild
+          path: package.json
     environment:
       - HOST=0.0.0.0
       - PORT=4321
