feat(database): initialize database package with Prisma setup and seed data
- Added README.md for the database package.
- Created package.json with necessary scripts and dependencies for Prisma.
- Implemented Prisma client in prisma.ts with acceleration support.
- Defined database schema in schema.prisma for Users model.
- Added seed script to populate initial user data in the database.
- Configured server connection details in servers.json.
- Developed API route to fetch users from the database in the web frontend.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "frontend:build": "yarn workspace @employee-salary-manager/frontend build",
-    "frontend:dev": "yarn workspace @employee-salary-manager/frontend dev"
+    "frontend:dev": "yarn workspace @employee-salary-manager/frontend dev",
+    "db:generate": "yarn workspace @employee-salary-manager/database generate",
+    "db:pull": "yarn workspace @employee-salary-manager/database pull",
+    "db:seed": "yarn workspace @employee-salary-manager/database seed",
+    "db:migrate": "yarn workspace @employee-salary-manager/database migrate dev"
   },
   "workspaces": [
     "packages/**/*"
