--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
             - node_modules
         - action: rebuild
           path: package.json
+    env_file:
+      - .env
     environment:
       - HOST=0.0.0.0
       - PORT=4321
@@ -25,7 +27,19 @@ services:
       - "4321:4321"
     volumes:
       - /app/node_modules
-    command: yarn frontend:dev
+    entrypoint: >
+      sh -c "
+        until nc -z database 5432; do
+          echo '⏳ Waiting for database…';
+          sleep 1;
+        done;
+        echo '✅ Database up — pulling any changes';
+        yarn db:pull;
+        echo '🛠️ Pull complete — generateing client';
+        yarn db:generate;
+        echo '🚀 Starting Next.js…';
+        yarn frontend:dev
+      "
 
   database:
     container_name: database
@@ -48,6 +62,7 @@ services:
       - database
     volumes:
       - admin-db:/var/lib/pgadmin/
+      - ./packages/database/servers.json:/pgadmin4/servers.json
 
 volumes:
   db:
