--- a/packages/web/frontend/package.json
+++ b/packages/web/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@employee-salary-manager/database": "workspace:*",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -25,7 +26,6 @@
     "lucide-react": "^0.507.0",
     "next": "15.2.2",
     "next-themes": "^0.4.6",
-    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
