--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "scripts": {
     "frontend:build": "yarn workspace @employee-salary-manager/frontend build",
-    "frontend:dev": "yarn workspace @employee-salary-manager/frontend dev"
+    "frontend:dev": "yarn workspace @employee-salary-manager/frontend dev",
+    "db:generate": "yarn workspace @employee-salary-manager/database generate",
+    "db:pull": "yarn workspace @employee-salary-manager/database pull",
+    "db:migrate": "yarn workspace @employee-salary-manager/database migrate dev"
   },
   "workspaces": [
     "packages/**/*"
